--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
         {% block extra_js %}
         {% endblock %}
 
-        <title>Boutique Ado {% block extra_title %}</title>
+        <title>Boutique Ado {% block extra_title %}{% endblock %}</title>
 
     </head>
 
@@ -50,9 +50,6 @@
         {% endif %}
 
         {% block page_header %}
-        {% endblock %}
-
-        {% block content %}
         {% endblock %}
 
         {% block content %}
