--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,6 +52,12 @@ body {
     color: #000 !important;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important;
+    border: 1px solid black;
+}
+
 .border-black {
     border: 1px solid black !important;
 }
@@ -86,6 +92,7 @@ a.category-badge > span.badge:hover {
 .btt-link {
     cursor: pointer;
 }
+
 
 /* -------------------------------- Media Queries */
 
