--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,7 @@ html {
 body {
     background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
     background-size: cover;
-    height: calc(100h - 164px);
+    height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
 }
@@ -38,6 +38,19 @@ body {
     color: white;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid black;
+}
+
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+    background: black;
+    color: white !important;
+}
+
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -52,12 +65,6 @@ body {
     color: #000 !important;
 }
 
-.btn-outline-black {
-    background: white;
-    color: black !important;
-    border: 1px solid black;
-}
-
 .border-black {
     border: 1px solid black !important;
 }
@@ -67,13 +74,13 @@ body {
 }
 
 .overlay {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: white;
-    z-index: -1;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
 }
 
 a.category-badge > span.badge:hover {
@@ -99,13 +106,13 @@ input[name='q']::placeholder {
     color: #aab7c4;
 }
 
-/* -------------------------------- Bootstrap Toasts */
+/* ------------------------------- bootstrap toasts */
 
 .message-container {
     position: fixed;
     top: 72px;
     right: 15px;
-    z-index: 999999;
+    z-index: 99999999999;
 }
 
 .custom-toast {
@@ -167,6 +174,15 @@ input[name='q']::placeholder {
     overflow-y: auto;
 }
 
+/* -------------------------------- Media Queries */
+
+/* Slightly larger container on xl screens */
+@media (min-width: 1200px) {
+  .container {
+    max-width: 80%;
+  }
+}
+
 /* Allauth form formatting */
 
 .allauth-form-inner-content p {
@@ -221,14 +237,34 @@ input[name='q']::placeholder {
 	color: #17a2b8; /* text-info */
 }
 
-/* -------------------------------- Media Queries */
+/* Product Form */
 
-/* Slightly larger container on xl screens */
-@media (min-width: 1200px) {
-  .container {
-    max-width: 80%;
-  }
+.btn-file {
+    position: relative;
+    overflow: hidden;
 }
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    border-radius: 0;
+}
+
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
@@ -252,6 +288,6 @@ input[name='q']::placeholder {
     }
 
     body {
-        height: calc(100vh-116px);
+        height: calc(100vh - 116px);
     }
 }
